[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -1,2 +1,24 @@
 <html>
+    <head>
+        <title>
+            Article-One by jas
+        </title>
+    </head>
+    <body>
+        <div>
+            <a href="/">Home</a>
+        </div>
+        <hr/>
+        <h1>
+            Article one
+        </h1>
+        <div>
+            Aug 08,2017
+        </div>
+        <div>
+            <p>
+                Just tp doing!
+            </p>
+        </div>
+    </body>
 </html>
