[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -3,8 +3,19 @@
         <title>
             Article-One by jas
         </title>
+        <style>
+            .container{
+                max-width=80px;
+                margin:0 auto;
+                color:'grey';
+                font:'sans-serif';
+                
+                
+            }
+        </style>
     </head>
     <body>
+        <div class="container">
         <div>
             <a href="/">Home</a>
         </div>
@@ -20,5 +31,6 @@
                 Just tp doing!
             </p>
         </div>
+    </div>
     </body>
 </html>
