[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -6,9 +6,9 @@
         <style>
             .container{
                 max-width=80px;
-                margin:0 auto;
-                color:'grey';
-                font:'sans-serif';
+                margin: 0 auto;
+                color:grey;
+                font:sans-serif;
                 
                 
             }
