--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -3,16 +3,7 @@
         <title>
             Article-One by jas
         </title>
-        <style>
-            .container{
-                max-width: 800px;
-                margin: 0 auto;
-                color:grey;
-                font-family:sans-serif;
-                
-                
-            }
-        </style>
+        <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
     <div class="container">
